--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             OVER 1000 USERS
                         </p>
                         <h1 class="hero__title">Enjoy Foods All Over The <span class="hero__title--allocated">World</span></h1>
-                        <p class="hero__description">EatLy help you set saving goals, earn cash back offers, Go to disclaimer for more details and get paychecks up to two days early. Get a <span class="bonus">$20 bonus.</span></p>
+                        <p class="hero__description">EatLy help you set saving goals, earn cash back offers, Go to disclaimer for more details and get paychecks up to two days early. Get a <span class="hero__description--bonus">$20 bonus.</span></p>
                         <div class="hero__btn flex">
                             <a class="btn hero--started" href="#">Get Started</a>
                             <button class="btn hero--pro">Go Pro</button>
@@ -215,7 +215,7 @@
                             <img src="/img/Swe-Dish.png" alt="">                                
                         </div>
                         <div class="dishes__card--bottom">
-                            <span class="card__skill yellow">Healthy</span>
+                            <span class="card__skill yellow dishes__skill">Healthy</span>
                             <h3 class="dishes__name">Chicken Hell</h3>
                             <div class="dishes__card--characteristic characteristic flex">
                                 <p class="card__time">24min •</p>
@@ -242,7 +242,7 @@
                             <img src="/img/Swe-Dish.png" alt="">                             
                         </div>
                         <div class="dishes__card--bottom">
-                            <span class="card__skill red">Trending</span>
+                            <span class="card__skill red dishes__skill">Trending</span>
                             <h3 class="dishes__name">Swe Dish</h3>
                             <div class="dishes__card--characteristic characteristic flex">
                                 <p class="card__time">34min •</p>
@@ -269,7 +269,7 @@
                             <img src="/img/swe_dish.png" alt="">                             
                         </div>
                         <div class="dishes__card--bottom">
-                            <span class="card__skill green">Supreme</span>
+                            <span class="card__skill green dishes__skill">Supreme</span>
                             <h3 class="dishes__name">Swe Dish</h3>
                             <div class="dishes__card--characteristic characteristic flex">
                                 <p class="card__time">34min •</p>
@@ -323,7 +323,7 @@
                             <img src="/img/Swe-Dish.png" alt="">                             
                         </div>
                         <div class="dishes__card--bottom">
-                            <span class="card__skill red">Trending</span>
+                            <span class="card__skill red dishes__skill">Trending</span>
                             <h3 class="dishes__name">Swe Dish</h3>
                             <div class="dishes__card--characteristic characteristic flex">
                                 <p class="card__time">34min •</p>
@@ -387,13 +387,13 @@
                             <div class="purchases__expenses--inner expenses">
                                 <div class="purchases__expenses--header expenses__header flex">
                                     <h3 class="expenses__header--title">Purchases</h3>
-                                    <div class="expenses__header--month__selection flex">
+                                    <div class="expenses__header--month__selection button__popup flex">
                                         <span>This month</span>
                                         <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M6.4209 10.2529L12.7033 16.5353L18.9856 10.2529" stroke="#1A202C" stroke-width="2.35588" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>                                            
                                     </div>
-                                    <ul class="expenses__header--month__list">
+                                    <ul class="expenses__header--month__list popup__list">
                                         <li class="expenses__header--month__title active">This month</li>
                                         <li class="expenses__header--month__title">Last week</li>
                                         <li class="expenses__header--month__title">Yesterday</li>
@@ -702,5 +702,6 @@
           },
         });
       </script>
+      <script src="/js/popup.js"></script>
 </body>
 </html>
