--- a/index.html
+++ b/index.html
@@ -628,12 +628,14 @@
         </section>
         <section class="subscribe">
             <div class="container">
-                <div class="subscribe__block grid">
+                <div class="subscribe__block flex">
+                    <div class="subscribe__block--left">
                         <h2 class="subscribe__sub--title">GET 50%</h2>
                         <div class="subscribe__input">
                             <input type="text" placeholder=" Enter Your Email Address">
                             <button class="subscribe__input--btn">subscribe</button>
                         </div>
+                    </div>
                         <img class="subscribe__img" src="/img/Swe-Dish.png" alt="">
                 </div>
             </div>
