changes in the slider

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>eatly</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 </head>
 <body>
     <div class="header">
@@ -74,7 +73,7 @@
                             </svg> 
                         </div>
                     </div>
-                    <img class="hero__img" src="/img/header2.png" alt="">
+                    <img class="hero__img" src="./img/header2.png" alt="">
                 </div>
             </div>
         </section>
@@ -109,7 +108,7 @@
         <section class="quality">
             <div class="container grid">
                 <div class="quality__left">
-                    <img src="/img/quality.png" width="370px" height="625px" alt="">
+                    <img src="./img/quality.png" width="370px" height="625px" alt="">
                 </div>
                 <div class="quality__right">
                     <h2 class="quality__title">Premium <span class="quality__title--allocated">Quality</span> For Your Health</h2>
@@ -133,7 +132,7 @@
                 <div class="restaurant__content flex">
                     <div class="card restaurant__card restaurant__content--card">
                         <div class="card__top">
-                            <img class="card__img" src="/img/chicken_king.png" height="176px" alt="Chicken King">
+                            <img class="card__img" src="./img/chicken_king.png" height="176px" alt="Chicken King">
                         </div>
                         <span class="card__skill restaurant__skill yellow">Healthy</span>
                         <div class="card__bottom grid">
@@ -154,7 +153,7 @@
                     </div>
                     <div class="card restaurant__card restaurant__content--card">
                         <div class="card__top">
-                            <img class="card__img" src="/img/burger_king.png" alt="Chicken King">
+                            <img class="card__img" src="./img/burger_king.png" alt="Chicken King">
                         </div>
                         <span class="card__skill restaurant__skill red">Trending</span>
                         <div class="card__bottom grid">
@@ -175,7 +174,7 @@
                     </div>
                     <div class="card restaurant__card restaurant__content--card">
                         <div class="card__top">
-                            <img class="card__img" src="/img/chicken_king.png" alt="Chicken King">
+                            <img class="card__img" src="./img/chicken_king.png" alt="Chicken King">
                         </div>
                         <span class="card__skill restaurant__skill yellow">Healthy</span>
                         <div class="card__bottom grid">
@@ -215,7 +214,7 @@
                             </svg>
                         </button>
                         <div class="dishes__card--top">
-                            <img src="/img/Swe-Dish.png" alt="">                                
+                            <img src="./img/Swe-Dish.png" alt="">                                
                         </div>
                         <div class="dishes__card--bottom">
                             <span class="card__skill yellow dishes__skill">Healthy</span>
@@ -242,7 +241,7 @@
                             </svg>
                         </button>
                         <div class="dishes__card--top">
-                            <img src="/img/Swe-Dish.png" alt="">                             
+                            <img src="./img/Swe-Dish.png" alt="">                             
                         </div>
                         <div class="dishes__card--bottom">
                             <span class="card__skill red dishes__skill">Trending</span>
@@ -269,7 +268,7 @@
                             </svg>
                         </button>
                         <div class="dishes__card--top">
-                            <img src="/img/swe_dish.png" alt="">                             
+                            <img src="./img/swe_dish.png" alt="">                             
                         </div>
                         <div class="dishes__card--bottom">
                             <span class="card__skill green dishes__skill">Supreme</span>
@@ -296,7 +295,7 @@
                             </svg>
                         </button>
                         <div class="dishes__card--top">
-                            <img src="/img/Swe-Dish.png" alt="">                             
+                            <img src="./img/Swe-Dish.png" alt="">                             
                         </div>
                         <div class="dishes__card--bottom">
                             <span class="card__skill dishes__skill yellow">Healthy</span>
@@ -323,7 +322,7 @@
                             </svg>
                         </button>
                         <div class="dishes__card--top">
-                            <img src="/img/Swe-Dish.png" alt="">                             
+                            <img src="./img/Swe-Dish.png" alt="">                             
                         </div>
                         <div class="dishes__card--bottom">
                             <span class="card__skill red dishes__skill">Trending</span>
@@ -360,7 +359,7 @@
                         <h2 class="purchases__title title">Control <span class="allocated--title">Purchases</span> Via Dashboard</h2>
                         <div class="purchases__card">
                             <div class="purchases__card--look flex">
-                                <img src="/img/On_The_Way.png" alt="">
+                                <img src="./img/On_The_Way.png" alt="">
                                 <div class="card__description">
                                     <h3 class="card__description--title">Chicken Hell</h3>
                                     <p class="card__description--action">On The Way</p>
@@ -368,7 +367,7 @@
                                 <span class="purchases__card--time">3:09 PM</span>
                             </div>
                             <div class="purchases__card--look flex">
-                                <img src="/img/On_The_Way.png" alt="">
+                                <img src="./img/On_The_Way.png" alt="">
                                 <div class="card__description">
                                     <h3 class="card__description--title">Chicken Hell</h3>
                                     <p class="card__description--action">On The Way</p>
@@ -376,7 +375,7 @@
                                 <span class="purchases__card--time">3:09 PM</span>
                             </div>
                             <div class="purchases__card--look flex">
-                                <img src="/img/On_The_Way.png" alt="">
+                                <img src="./img/On_The_Way.png" alt="">
                                 <div class="card__description">
                                     <h3 class="card__description--title">Chicken Hell</h3>
                                     <p class="card__description--action card--red">On The Way</p>
@@ -461,7 +460,7 @@
                                 <div class="reviews__card--inner">
                                     <div class="reviews__card--header flex">
                                         <div class="reviews__user-profile user flex">
-                                            <img src="/img/user.png" alt="user">
+                                            <img src="./img/user.png" alt="user">
                                             <div class="user__description">
                                                 <h4 class="user__name">Alexander R.</h4>
                                                 <p class="user__with--us">01 Year With Us</p>
@@ -489,7 +488,7 @@
                                 <div class="reviews__card--inner">
                                     <div class="reviews__card--header flex">
                                         <div class="reviews__user-profile user flex">
-                                            <img src="/img/user.png" alt="user">
+                                            <img src="./img/user.png" alt="user">
                                             <div class="user__description">
                                                 <h4 class="user__name">Alexander R.</h4>
                                                 <p class="user__with--us">01 Year With Us</p>
@@ -517,7 +516,7 @@
                                 <div class="reviews__card--inner">
                                     <div class="reviews__card--header flex">
                                         <div class="reviews__user-profile user flex">
-                                            <img src="/img/user.png" alt="user">
+                                            <img src="./img/user.png" alt="user">
                                             <div class="user__description">
                                                 <h4 class="user__name">Alexander R.</h4>
                                                 <p class="user__with--us">01 Year With Us</p>
@@ -545,7 +544,7 @@
                                 <div class="reviews__card--inner">
                                     <div class="reviews__card--header flex">
                                         <div class="reviews__user-profile user flex">
-                                            <img src="/img/user.png" alt="user">
+                                            <img src="./img/user.png" alt="user">
                                             <div class="user__description">
                                                 <h4 class="user__name">Alexander R.</h4>
                                                 <p class="user__with--us">01 Year With Us</p>
@@ -573,7 +572,7 @@
                                 <div class="reviews__card--inner">
                                     <div class="reviews__card--header flex">
                                         <div class="reviews__user-profile user flex">
-                                            <img src="/img/user.png" alt="user">
+                                            <img src="./img/user.png" alt="user">
                                             <div class="user__description">
                                                 <h4 class="user__name">Alexander R.</h4>
                                                 <p class="user__with--us">01 Year With Us</p>
@@ -601,7 +600,7 @@
                                 <div class="reviews__card--inner">
                                     <div class="reviews__card--header flex">
                                         <div class="reviews__user-profile user flex">
-                                            <img src="/img/user.png" alt="user">
+                                            <img src="./img/user.png" alt="user">
                                             <div class="user__description">
                                                 <h4 class="user__name">Alexander R.</h4>
                                                 <p class="user__with--us">01 Year With Us</p>
@@ -639,7 +638,7 @@
                             <button class="subscribe__input--btn">subscribe</button>
                         </div>
                     </div>
-                        <img class="subscribe__img" src="/img/Swe-Dish.png" alt="">
+                        <img class="subscribe__img" src="./img/Swe-Dish.png" alt="">
                 </div>
             </div>
         </section>
@@ -720,18 +719,8 @@
             </div>
         </div>
     </div>
-
-    <script>
-        let swiper = new Swiper(".mySwiper", {
-          slidesPerView: 1,
-          spaceBetween: 30,
-          pagination: {
-            el: ".swiper-pagination",
-            clickable: true,
-          },
-        });
-      </script>
-      <script src="/js/popup.js"></script>
-      <script src="/js/function/burger.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+      <script src="./js/slider.js"></script>
+      <script src="./js/function/burger.js"></script>
 </body>
 </html>
